--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
